--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.16",
+    "@rainbow-me/rainbowkit": "^1.0.8",
     "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "react-scroll": "^1.8.9"
+    "react-scroll": "^1.8.9",
+    "viem": "^1.6.0",
+    "wagmi": "^1.3.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
