--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@headlessui/react": "^1.7.16",
     "@rainbow-me/rainbowkit": "^1.0.8",
     "aos": "^2.3.4",
+    "ethers": "^6.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
     "viem": "^1.6.0",
-    "wagmi": "^1.3.10"
+    "wagmi": "^1.3.10",
+    "web3": "^4.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
